<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".mainMenu"
    android:id="@+id/menu_layout"
    android:background="@drawable/discaddy">
<android.widget.ActionMenuView
    android:layout_width="@dimen/abc_action_bar_stacked_tab_max_width"
    android:layout_height="@dimen/abc_action_bar_stacked_max_height"
    android:layout_centerVertical="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_alignParentRight="true"
    android:layout_alignParentEnd="true"
    android:id="@+id/action_view" >

</android.widget.ActionMenuView>

    <RelativeLayout
        android:layout_width="@dimen/abc_action_bar_stacked_max_height"
        android:layout_height="@dimen/abc_action_bar_stacked_tab_max_width"
        android:id="@+id/main_menu"
        android:visibility="visible"

        android:layout_below="@+id/action_view"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Score Card"
            android:id="@+id/score_card"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/course_finder"
            android:id="@+id/course_finder"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
             />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_game"
            android:id="@+id/new_game"
            android:layout_above="@+id/course_finder"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
             />
    </RelativeLayout>

    <RelativeLayout
    android:layout_width="@dimen/abc_action_bar_stacked_tab_max_width"
    android:layout_height="@dimen/abc_action_bar_stacked_max_height"
    android:visibility="gone"
    android:id="@+id/new_game_parameters"
        android:layout_below="@+id/action_view"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/number_holes_text"
            android:id="@+id/number_holes_text" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:ems="10"
            android:id="@+id/number_holes"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/number_holes_text"
            android:layout_toEndOf="@+id/number_holes_text"
            android:layout_marginLeft="51dp"
            android:layout_marginStart="51dp"
            android:text="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/number_players_text"
            android:id="@+id/textView"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:ems="10"
            android:id="@+id/number_players"
            android:layout_alignTop="@+id/textView"
            android:layout_alignLeft="@+id/number_holes"
            android:layout_alignStart="@+id/number_holes"
            android:text="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:id="@+id/start_button"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

</RelativeLayout>
